<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatbot_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ChatBot">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:weightSum="90">

        <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:clickable="true"
            android:gravity="left"
            android:paddingLeft="15dp"
            android:text="BACK"
            android:textColor="@color/back_help_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/unibot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:clickable="true"
            android:gravity="center"
            android:text="UNIBOT"
            android:textColor="@color/unibot_color"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:clickable="true"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="HELP"
            android:textColor="@color/back_help_color"
            android:textSize="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <View
            android:layout_width="0dp"
            android:layout_height="3px"
            android:layout_weight="2"
            android:background="#a8b2c1" />

        <View
            android:layout_width="0dp"
            android:layout_height="3px"
            android:layout_weight="3"
            android:background="#000000" />

        <View
            android:layout_width="0dp"
            android:layout_height="3px"
            android:layout_weight="2"
            android:background="#a8b2c1" />


    </LinearLayout>

    <ListView
        android:id="@+id/msgview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4.44"
        android:background="#f9f9f9"
        android:clickable="true"
        android:divider="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"></ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#E5E5E5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="#FFFFFF" />

    <LinearLayout
        android:id="@+id/msgcontain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/msg"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2.5"
            android:backgroundTint="#67CDFF"
            android:hint="Ask uniBOT..."
            android:textColor="#000000" />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/send_button"
            android:padding="10dp"

            android:text="Send"
            android:textColor="#FFFFFF" />


    </LinearLayout>


</LinearLayout>